@@ -6,6 +6,7 @@
 - indices names with ':' were crashing the qmodel, now fixed
 - minor fixes in documentation
 - iter new method which subsets indices
+- plot(fit, indices) warns and removes FLIndexBiomass indices.
 
  FLa4a 1.0.0:
 
